// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Read only 1`] = `
<div
  className="editor__wrapper"
>
  <div
    className="editor"
  >
    <div
      className="editor__inner"
    >
      <div
        className="editor__text-container"
      >
        <h1
          className="editor__title"
          style={
            Object {
              "height": undefined,
            }
          }
        >
          My take title
        </h1>
        <div
          className="editor__title-height-div"
        />
      </div>
      <div
        className="editor__block-list"
      >
        <div
          className="editor__block editor__block--base"
        >
          <div
            className="editor__text-container"
          >
            <p
              className="editor__paragraph"
              style={
                Object {
                  "height": undefined,
                }
              }
            >
              Some text
            </p>
            <div
              className="editor__paragraph-height-div"
            >
              <p>
                <br />
              </p>
            </div>
          </div>
        </div>
        <div
          className="editor__block editor__block--base"
        >
          <div
            className="editor__document editor__document--base editor__document--hover"
            onClick={[Function]}
          >
            <div>
              <h2
                className="editor__document-title"
              >
                United States Constitution
              </h2>
              <div
                className={undefined}
                onMouseUp={undefined}
              >
                <h2
                  data-offset="361"
                >
                  Article.
                  <span
                    className="editor__document-highlight"
                  >
                     I.
                  </span>
                </h2>
                <h3
                  data-offset="393"
                >
                  <span
                    className="editor__document-highlight"
                  >
                    Section. 1.
                  </span>
                  
                </h3>
                <p
                  data-offset="424"
                >
                  <span
                    className="editor__document-highlight"
                  >
                    All legislative Powers herein granted shall be vested in a Congress of the United States, 
                  </span>
                  which shall consist of a Senate and House of Representatives.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Simple block editor model 1`] = `
<div
  className="editor__wrapper"
>
  <div
    className="editor"
  >
    <div
      className="editor__inner"
    >
      <div
        className="editor__text-container"
      >
        <textarea
          className="editor__title"
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          placeholder="Title"
          style={
            Object {
              "height": undefined,
            }
          }
          value="My take title"
        />
        <div
          className="editor__title-height-div"
        />
      </div>
      <div
        className="editor__block-list"
      >
        <div
          className="editor__block editor__block--base"
        >
          <div
            className="editor__text-container"
          >
            <textarea
              className="editor__paragraph"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              placeholder="Use your voice here."
              style={
                Object {
                  "height": undefined,
                }
              }
              value="Some text"
            />
            <div
              className="editor__paragraph-height-div"
            >
              <p>
                <br />
              </p>
            </div>
          </div>
        </div>
        <div
          className="editor__block editor__block--base"
        >
          <div
            className="editor__document editor__document--base editor__document--focus"
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <div>
              <h2
                className="editor__document-title"
              >
                United States Constitution
              </h2>
              <div
                className={undefined}
                onMouseUp={undefined}
              >
                <h2
                  data-offset="361"
                >
                  Article.
                  <span
                    className="editor__document-highlight"
                  >
                     I.
                  </span>
                </h2>
                <h3
                  data-offset="393"
                >
                  <span
                    className="editor__document-highlight"
                  >
                    Section. 1.
                  </span>
                  
                </h3>
                <p
                  data-offset="424"
                >
                  <span
                    className="editor__document-highlight"
                  >
                    All legislative Powers herein granted shall be vested in a Congress of the United States, 
                  </span>
                  which shall consist of a Senate and House of Representatives.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`With active 1`] = `
<div
  className="editor__wrapper"
>
  <div
    className="editor"
  >
    <div
      className="editor__inner"
    >
      <div
        className="editor__text-container"
      >
        <textarea
          className="editor__title"
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          placeholder="Title"
          style={
            Object {
              "height": undefined,
            }
          }
          value="My take title"
        />
        <div
          className="editor__title-height-div"
        />
      </div>
      <div
        className="editor__block-list"
      >
        <div
          className="editor__block editor__block--base"
        >
          <div
            className="editor__text-container"
          >
            <textarea
              className="editor__paragraph"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              placeholder="Use your voice here."
              style={
                Object {
                  "height": undefined,
                }
              }
              value="Some text"
            />
            <div
              className="editor__paragraph-height-div"
            >
              <p>
                <br />
              </p>
            </div>
          </div>
        </div>
        <div
          className="editor__block editor__block--base"
        >
          <div
            className="editor__document editor__document--base editor__document--focus"
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <div>
              <h2
                className="editor__document-title"
              >
                United States Constitution
              </h2>
              <div
                className={undefined}
                onMouseUp={undefined}
              >
                <h2
                  data-offset="361"
                >
                  Article.
                  <span
                    className="editor__document-highlight"
                  >
                     I.
                  </span>
                </h2>
                <h3
                  data-offset="393"
                >
                  <span
                    className="editor__document-highlight"
                  >
                    Section. 1.
                  </span>
                  
                </h3>
                <p
                  data-offset="424"
                >
                  <span
                    className="editor__document-highlight"
                  >
                    All legislative Powers herein granted shall be vested in a Congress of the United States, 
                  </span>
                  which shall consist of a Senate and House of Representatives.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
